# nanoNext

./: .gitignore  PROVE.md  README.md  benchmark.py  inf.py  pyproject.toml  train.py
config/inference/: default.yaml
config/models/: demo.yaml  full.yaml
config/train/: demo.yaml
nanoNext/: __init__.py  benchmark.py  cache.py  config.py  inference.py  model.py  training.py  utils.py
nanoNext/modules/: __init__.py  attention.py  moe.py  norm.py
tests/: test_attention.py
